[package]
name = "testrpc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
thiserror = "2.0.12"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
libp2p = { package = "libp2p", version = "0.55", default-features = false }
hex = "0.4.3"
futures = "0.3.31"
clap = { version = "4.5.35", features = ["derive", "env"] }
bytes = "1.0"
